Updates for system config and miscellaneous changes.
